fix: proxy quick share crash on Android 10~12